@@ -4,6 +4,8 @@
    want this longhand version)
  - (djm) [openbsd-compat/getgrouplist.c] Remove OpenBSD rcsid marker: the
    upstream version is YPified and we don't want this
+ - (djm) [openbsd-compat/mktemp.c] forklift upgrade to -current version.
+   The file was totally rewritten between what we had in tree and -current.
  - OpenBSD CVS Sync
    - millert@cvs.openbsd.org 2006/05/05 15:27:38
      [openbsd-compat/strlcpy.c]
